--- a/language/fr-FR.po
+++ b/language/fr-FR.po
@@ -19,7 +19,7 @@ msgstr ""
 
 #: view/biblionumber-support/index/redirect.phtml:5
 msgid "Item not found with biblionumber field : "
-msgstr "Notice non trouvée avec le champ biblionumber : "
+msgstr "Aucune notice portant le champ biblionumber suivant n'a été trouvée : "
 
 #: view/biblionumber-support/index/redirect.phtml:9
 msgid "Back to homepage"
